--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Triagem - By Valdigley Santos</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <meta property="og:title" content="Triagem - By Valdigley Santos" />
+    <meta property="og:description" content="Sistema de gestão de galerias fotográficas" />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="" />
+    <meta property="twitter:title" content="Triagem - By Valdigley Santos" />
+    <meta property="twitter:description" content="Sistema de gestão de galerias fotográficas" />
+    <meta property="twitter:image" content="" />
   </head>
   <body>
     <div id="root"></div>
